# disk-space

./: .gitignore  Cargo.toml  README.md
find-empty-folders/: Cargo.toml  README.md  exte.json  filetype.rs  jsontypes.rs  main.rs  smachine.rs
find-empty-folders/tests/: mod.rs  recursive.rs  util.rs
