[package]
publish = true
name = "find-empty-folders"
version = "0.1.0"
authors = ["Cadence Data Soft Pvt. Ltd <debbi@cadencedatasoft.in>"]
description = "A simple command line tool to list empty folders and duplicate files in the given folder."
documentation = ""
homepage = "https://www.cadencedatasoft.in"
repository = ""
keywords = ["disk space", "filesystem", "storage", "rust", "c++", "backup"]
license = "GNU GENERAL PUBLIC LICENSE V3"
categories = ["command-line-utilities"]
edition = "2018"

[[bin]]
name = "find-empty-folders"
path = "main.rs"

[dependencies]
atty = "0.2.11"
ring = "0.16.20"
data-encoding = "2.3.2"
bstr = { version = "0.2.16", default-features = false, features = ["std"] }
clap = { version = "2.33.0", default-features = false }
walkdir = { version = "*", path = ".." }
lazy_static = "1.4.0"
once_cell = "1.7.2"
byteorder = "1.4.3"
num256 = "0.2.9"
indicatif = "0.16.0"